--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "gray-matter": "^4.0.2",
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "unified": "^9.2.0",
+    "uuid": "^8.3.2"
   }
 }
