--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "autoprefixer": "^10.2.4",
+    "dayjs": "^1.10.4",
     "next": "10.0.6",
     "postcss": "^8.2.6",
     "react": "17.0.1",
@@ -19,11 +21,10 @@
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "gray-matter": "^4.0.2",
+    "react-markdown": "^5.0.3",
     "remark-highlight.js": "^6.0.0",
-    "remark-html": "^13.0.1",
-    "remark-parse": "^9.0.0",
-    "unified": "^9.2.0",
     "uuid": "^8.3.2"
   }
 }
