--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "autoprefixer": "^10.2.4",
     "dayjs": "^1.10.4",
+    "framer-motion": "^3.3.0",
     "next": "10.0.6",
     "postcss": "^8.2.6",
     "react": "17.0.1",
