--- a/package.json
+++ b/package.json
@@ -17,17 +17,15 @@
     "framer-motion": "^3.3.0",
     "next": "10.0.6",
     "postcss": "^8.2.6",
-    "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-syntax-highlighter": "^15.4.3",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.0",
     "gray-matter": "^4.0.2",
     "react-markdown": "^5.0.3",
-    "remark-highlight.js": "^6.0.0",
-    "remark-prism": "^1.3.4",
     "uuid": "^8.3.2"
   }
 }
