--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "react-markdown": "^5.0.3",
-    "uuid": "^8.3.2"
+    "uniqid": "^5.3.0"
   }
 }
