--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "autoprefixer": "^10.2.4",
-    "next": "10.0.6",
-    "postcss": "^8.2.6",
+    "next": "10.0.7",
+    "postcss": "^8.2.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-syntax-highlighter": "^15.4.3",
@@ -22,6 +22,7 @@
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "react-markdown": "^5.0.3",
+    "remark-gfm": "^1.0.0",
     "uniqid": "^5.3.0"
   }
 }
