--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "autoprefixer": "^10.2.4",
-    "next": "10.0.7",
-    "postcss": "^8.2.7",
+    "autoprefixer": "^10.2.5",
+    "next": "^10.0.9",
+    "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-syntax-highlighter": "^15.4.3",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.3",
     "@tailwindcss/typography": "^0.4.0",
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
